daytrip foursquare integration

--- a/DayTripNJ.App/Pages/Login.razor
+++ b/DayTripNJ.App/Pages/Login.razor
@@ -12,7 +12,7 @@
     <div class="form-outer" style="min-width: 250px; max-width: 500px; margin-left:auto; margin-right:auto">
         <EditForm Model="@Model" OnValidSubmit="@Submit">
             <DataAnnotationsValidator/>
-            <img src="/assets/icons/nj.png" style="padding-top:5%; border-radius:10px;display: block;margin-left: auto; margin-right: auto;" width = "50%" height = "auto"/>
+            <img src="/assets/icons/DayTrip.png" style="padding-top:5%; border-radius:10px;display: block;margin-left: auto; margin-right: auto;" width = "50%" height = "auto"/>
             <div class="form-input">
                 <label>Email</label>
                 <div>
