--- a/DayTripNJ.App/Pages/Register.razor
+++ b/DayTripNJ.App/Pages/Register.razor
@@ -9,7 +9,7 @@
     <div class="form-outer" style="min-width: 250px; max-width: 500px; margin-left:auto; margin-right:auto">
         <EditForm Model="@RegModel" OnValidSubmit="@Submit">
             <FluentValidationValidator/>
-            <img src="/assets/icons/nj.png" style="padding-top:5%; border-radius:10px;display: block;margin-left: auto; margin-right: auto;" width = "50%" height = "auto"/>
+            <img src="/assets/icons/DayTrip.png" style="padding-top:5%; border-radius:10px;display: block;margin-left: auto; margin-right: auto;" width = "50%" height = "auto"/>
             <div class="inline-entry">
                 <div class="form-input">
                     <label>First Name</label>
